[gd_scene load_steps=7 format=2]

[ext_resource path="res://postprocess-effects/CRTeffect_layer.tscn" type="PackedScene" id=1]
[ext_resource path="res://postprocess-effects/oldscreen_env.tres" type="Environment" id=2]
[ext_resource path="res://scripts/main.gd" type="Script" id=3]
[ext_resource path="res://VirtualJoystick/Joystick.tscn" type="PackedScene" id=4]
[ext_resource path="res://VirtualJoystick/JoystickSpe.tscn" type="PackedScene" id=5]
[ext_resource path="res://pixelPlanets/Theme.tres" type="Theme" id=6]

[node name="team-deathmatch" type="Control"]
modulate = Color( 0, 1, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RespawnCamera" type="Camera2D" parent="."]

[node name="Terrain_layer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enable = true

[node name="main_layer" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enable = true

[node name="UI_layer" type="CanvasLayer" parent="."]

[node name="JoystickMove" parent="UI_layer" instance=ExtResource( 4 )]
margin_top = -350.0
margin_right = 350.0

[node name="JoystickAim" parent="UI_layer" instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -350.0
margin_top = -400.0
margin_right = 0.0
margin_bottom = -50.0

[node name="JoystickSpe" parent="UI_layer" instance=ExtResource( 5 )]
visible = false
margin_left = -500.0
margin_top = -200.0
margin_right = -350.0
margin_bottom = -50.0

[node name="touchPauseButtonLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Button" type="Button" parent="touchPauseButtonLayer"]
modulate = Color( 0, 1, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -110.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 6 )
text = "PAUSE"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CRTeffect_layer" parent="." instance=ExtResource( 1 )]
layer = 3

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )
